# docker_learning

./: Dockerfile  README.md  commands.txt  creating_docker_image_for_aws  creating_docker_image_for_aws.txt  sql_server_m1_mac.txt
mongodb/: docker-compose.yaml  pyproject.toml  setup.py  start.sh
