[project]
name = "mongodb"
version = "0.1.0"
description = ""
authors = [
    {name = "FreyGeospatial"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.10.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
